--- a/.github/workflows/Merge to Main.yml
+++ b/.github/workflows/Merge to Main.yml
@@ -1,4 +1,4 @@
-name: docker-build
+name: Merge to Main
 
 on:
   push:
@@ -45,10 +45,18 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    needs:
-      - build-and-push-image
-    uses: ./.github/workflows/deploy-gke.yml
+    needs: [build-and-push-image]
+    uses: ./.github/workflows/_deploy-gke.yml
+    secrets: inherit
     with:
       version: main
-      environment: dev
+      app_name: subgraph-b
+      cluster_suffix: dev
+
+  publish:
+    needs: [deploy]
+    uses: ./.github/workflows/_rover-subgraph-publish.yml
     secrets: inherit
+    with:
+      subgraph_name: subgraph-b
+      variant: dev
