--- a/.github/workflows/_deploy-gke.yml
+++ b/.github/workflows/_deploy-gke.yml
@@ -79,6 +79,8 @@ jobs:
         if: ${{ inputs.dry-run }}
         run: |
           helm upgrade ${{ inputs.app_name }} \
+          --create-namespace \
+          --namespace ${{ inputs.app_name }} \
           --set image.repository=$REGISTRY/$IMAGE \
           --set image.tag=${{ inputs.version }} \
           --dry-run \
@@ -86,13 +88,16 @@ jobs:
           --install \
           --timeout 10m0s \
           ./deploy/${{ inputs.app_name }} \
-          --values ./deploy/${{ inputs.app_name }}/values.yaml
+          --values ./deploy/${{ inputs.app_name }}/values.yaml \
+          -f ./deploy/${{ inputs.app_name }}/environments/${{ inputs.cluster_suffix }}.yaml
 
       # Deploy the Docker image to the GKE cluster for real with debug
       - name: Deploy
         if: ${{ !inputs.dry-run && inputs.debug }}
         run: |
           helm upgrade ${{ inputs.app_name }} \
+          --create-namespace \
+          --namespace ${{ inputs.app_name }} \
           --set image.repository=$REGISTRY/$IMAGE \
           --set image.tag=${{ inputs.version }} \
           --atomic \
@@ -100,17 +105,21 @@ jobs:
           --timeout 10m0s \
           --debug \
           ./deploy/${{ inputs.app_name }} \
-          --values ./deploy/${{ inputs.app_name }}/values.yaml
+          --values ./deploy/${{ inputs.app_name }}/values.yaml \
+          -f ./deploy/${{ inputs.app_name }}/environments/${{ inputs.cluster_suffix }}.yaml
 
       # Deploy the Docker image to the GKE cluster for real
       - name: Deploy
         if: ${{ !inputs.dry-run }}
         run: |
           helm upgrade ${{ inputs.app_name }} \
+          --create-namespace \
+          --namespace ${{ inputs.app_name }} \
           --set image.repository=$REGISTRY/$IMAGE \
           --set image.tag=${{ inputs.version }} \
           --atomic \
           --install \
           --timeout 10m0s \
           ./deploy/${{ inputs.app_name }} \
-          --values ./deploy/${{ inputs.app_name }}/values.yaml
+          --values ./deploy/${{ inputs.app_name }}/values.yaml \
+          -f ./deploy/${{ inputs.app_name }}/environments/${{ inputs.cluster_suffix }}.yaml
