smaller resource requests in dev

--- a/deploy/subgraph-b/values.yaml
+++ b/deploy/subgraph-b/values.yaml
@@ -32,10 +32,7 @@ ingress:
           pathType: Prefix
   tls: []
 
-resources:
-  requests:
-    cpu: 500m
-    memory: 500Mi
+resources: {}
 
 autoscaling:
   enabled: false
