--- a/.github/workflows/_deploy-gke.yml
+++ b/.github/workflows/_deploy-gke.yml
@@ -78,15 +78,16 @@ jobs:
       - name: Helm dry-run
         if: ${{ inputs.dry-run }}
         run: |
+          repository=$(echo "$REGISTRY/$IMAGE" | tr '[:upper:]' '[:lower:]')
+
           helm upgrade ${{ inputs.app_name }} \
           --create-namespace \
           --namespace ${{ inputs.app_name }} \
-          --set image.repository=$REGISTRY/$IMAGE \
+          --set image.repository=$repository \
           --set image.tag=${{ inputs.version }} \
           --dry-run \
           --atomic \
           --install \
-          --timeout 10m0s \
           ./deploy/${{ inputs.app_name }} \
           --values ./deploy/${{ inputs.app_name }}/values.yaml \
           -f ./deploy/${{ inputs.app_name }}/environments/${{ inputs.cluster_suffix }}.yaml
@@ -95,14 +96,15 @@ jobs:
       - name: Deploy
         if: ${{ !inputs.dry-run && inputs.debug }}
         run: |
+          repository=$(echo "$REGISTRY/$IMAGE" | tr '[:upper:]' '[:lower:]')
+
           helm upgrade ${{ inputs.app_name }} \
           --create-namespace \
           --namespace ${{ inputs.app_name }} \
-          --set image.repository=$REGISTRY/$IMAGE \
+          --set image.repository=$repository \
           --set image.tag=${{ inputs.version }} \
           --atomic \
           --install \
-          --timeout 10m0s \
           --debug \
           ./deploy/${{ inputs.app_name }} \
           --values ./deploy/${{ inputs.app_name }}/values.yaml \
@@ -112,14 +114,15 @@ jobs:
       - name: Deploy
         if: ${{ !inputs.dry-run }}
         run: |
+          repository=$(echo "$REGISTRY/$IMAGE" | tr '[:upper:]' '[:lower:]')
+
           helm upgrade ${{ inputs.app_name }} \
           --create-namespace \
           --namespace ${{ inputs.app_name }} \
-          --set image.repository=$REGISTRY/$IMAGE \
+          --set image.repository=$repository \
           --set image.tag=${{ inputs.version }} \
           --atomic \
           --install \
-          --timeout 10m0s \
           ./deploy/${{ inputs.app_name }} \
           --values ./deploy/${{ inputs.app_name }}/values.yaml \
           -f ./deploy/${{ inputs.app_name }}/environments/${{ inputs.cluster_suffix }}.yaml
