--- a/.github/workflows/Merge to Main.yml
+++ b/.github/workflows/Merge to Main.yml
@@ -55,7 +55,7 @@ jobs:
     secrets: inherit
     with:
       version: main
-      app_name: subgraph-a
+      app_name: subgraph-b
       cluster_suffix: dev
 
   deploy_aws:
@@ -65,7 +65,7 @@ jobs:
     secrets: inherit
     with:
       version: main
-      app_name: subgraph-a
+      app_name: subgraph-b
       cluster_suffix: dev
       region: us-east-1
 
@@ -77,5 +77,5 @@ jobs:
     uses: ./.github/workflows/_rover-subgraph-publish.yml
     secrets: inherit
     with:
-      subgraph_name: subgraph-a
+      subgraph_name: subgraph-b
       variant: dev
