--- a/.github/workflows/Manual Deploy.yml
+++ b/.github/workflows/Manual Deploy.yml
@@ -4,7 +4,7 @@ name: Manual Deploy
 # https://docs.github.com/en/actions/deployment/deploying-to-your-cloud-provider/deploying-to-google-kubernetes-engine
 
 # REQUIRED REPO SECRETS
-#   - GCP_CREDENTIALS
+#   - GCP_CREDENTIALS or AWS_ACCESS_KEY/SECRET
 #   - CLUSTER_PREFIX
 #   - APOLLO_KEY
 #   - APOLLO_GRAPH_ID
@@ -37,7 +37,13 @@ on:
         default: false
 
 jobs:
-  deploy:
+  determine_cloud_provider:
+    uses: ./.github/workflows/_determine-provider.yml
+    secrets: inherit
+
+  deploy_gcp:
+    if: needs.determine_cloud_provider.outputs.gcp == 'true'
+    needs: [determine_cloud_provider]
     uses: ./.github/workflows/_deploy-gke.yml
     secrets: inherit
     with:
@@ -46,3 +52,16 @@ jobs:
       cluster_suffix: ${{ inputs.environment }}
       dry-run: ${{ inputs.dry-run }}
       debug: ${{ inputs.debug }}
+
+  deploy_aws:
+    if: needs.determine_cloud_provider.outputs.aws == 'true'
+    needs: [determine_cloud_provider]
+    uses: ./.github/workflows/_deploy-aws.yml
+    secrets: inherit
+    with:
+      version: ${{ inputs.version }}
+      app_name: subgraph-b
+      cluster_suffix: ${{ inputs.environment }}
+      dry-run: ${{ inputs.dry-run }}
+      debug: ${{ inputs.debug }}
+
