--- a/.github/workflows/_deploy-aws.yml
+++ b/.github/workflows/_deploy-aws.yml
@@ -1,7 +1,4 @@
-name: _deploy-gke
-
-# Started from GH Docs
-# https://docs.github.com/en/actions/deployment/deploying-to-your-cloud-provider/deploying-to-google-kubernetes-engine
+name: _deploy-aws
 
 on:
   workflow_call:
@@ -15,7 +12,7 @@ on:
         type: string
         required: true
       cluster_suffix:
-        description: Target GKE cluster suffix
+        description: Target AWS cluster suffix
         type: string
         required: true
       dry-run:
@@ -28,16 +25,25 @@ on:
         description: Run helm in debug mode
         required: false
         default: false
+      region:
+        description: AWS target region
+        type: string
+        default: us-east-1
+        required: false
     secrets:
-      GCP_CREDENTIALS:
+      AWS_ACCESS_KEY:
+        required: true
+      AWS_SECRET_KEY:
         required: true
       CLUSTER_PREFIX:
         required: true
 
 env:
   IMAGE: ${{ github.repository }}
-  GKE_ZONE: us-east1
   REGISTRY: ghcr.io
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+  AWS_REGION: ${{ inputs.region }}
 
 jobs:
   deploy:
@@ -48,27 +54,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - id: "auth"
-        uses: "google-github-actions/auth@v0"
-        with:
-          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
-
-      - name: "Set up Cloud SDK"
-        uses: google-github-actions/setup-gcloud@v0
-
-      - name: "Use gcloud CLI"
-        run: gcloud info
-
-      # Configure Docker to use the gcloud command-line tool as a credential
-      # helper for authentication
-      - run: |-
-          gcloud --quiet auth configure-docker
-
-      # Get the GKE credentials so we can deploy to the cluster
-      - uses: google-github-actions/get-gke-credentials@fb08709ba27618c31c09e014e1d8364b02e5042e
-        with:
-          cluster_name: ${{ secrets.CLUSTER_PREFIX }}-${{ inputs.cluster_suffix }}
-          location: ${{ env.GKE_ZONE }}
+      - name: "Configure Kubeconfig w/ EKS"
+        run: aws eks update-kubeconfig --name ${{ secrets.CLUSTER_PREFIX }}-${{ inputs.cluster_suffix }} --region ${{ env.AWS_REGION }}
 
       # Deploy the Docker image to the GKE cluster with dry run
       - name: Helm dry-run
